export const KeyCodeMapping: Record<string, string> = {
  // ---------------------------------------------------------------------------
  // LETTERS (A–Z)
  // ---------------------------------------------------------------------------
  "29": "KeyA",
  "30": "KeyB",
  "31": "KeyC",
  "32": "KeyD",
  "33": "KeyE",
  "34": "KeyF",
  "35": "KeyG",
  "36": "KeyH",
  "37": "KeyI",
...
